force-app/main/default/objects/KimbleAgent__Problem__c/KimbleAgent__Problem__c.object-meta.xml
<CustomObject>
    <label>Kimble Sense Problem</label>
    <nameField>
        <label>Problem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kimble Sense Problems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>