force-app/main/default/objects/KimbleAgent__Problem__c/fields/KimbleAgent__LastUpdated__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__LastUpdated__c</fullName>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>