force-app/main/default/objects/KimbleAgent__Problem__c/fields/KimbleAgent__Measure__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__Measure__c</fullName>
    <label>Measure</label>
    <referenceTo>KimbleAgent__Measure__c</referenceTo>
    <relationshipLabel>Problems</relationshipLabel>
    <relationshipName>Problems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>