force-app/main/default/objects/KimbleAgent__Problem__c/fields/KimbleAgent__ResolutionDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__ResolutionDate__c</fullName>
    <label>Resolution Date</label>
    <type>DateTime</type>
</CustomField>