force-app/main/default/objects/KimbleAgent__Problem__c/fields/KimbleAgent__ResolutionMessage__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__ResolutionMessage__c</fullName>
    <label>Resolution Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>