force-app/main/default/objects/KimbleAgent__Problem__c/fields/KimbleAgent__ResolutionStatus__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__ResolutionStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resolution Status</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleAgent__ReferenceData__c.KimbleAgent__Domain__c</field>
            <operation>equals</operation>
            <value>ProblemResolutionStatus</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleAgent__ReferenceData__c</referenceTo>
    <relationshipLabel>Problems (Resolution Status)</relationshipLabel>
    <relationshipName>ProblemsResolutionStatus</relationshipName>
    <type>Lookup</type>
</CustomField>