force-app/main/default/objects/KimbleAgent__Problem__c/fields/KimbleAgent__RetryCount__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__RetryCount__c</fullName>
    <label>Retry Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>