force-app/main/default/objects/KimbleAgent__Problem__c/listViews/KimbleAgent__All.listView-meta.xml
<ListView>
    <fullName>KimbleAgent__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleAgent__Measure__c</columns>
    <columns>KimbleAgent__Body__c</columns>
    <columns>KimbleAgent__LastUpdated__c</columns>
    <columns>KimbleAgent__ResolutionDate__c</columns>
    <columns>KimbleAgent__ResolutionStatus__c</columns>
    <columns>KimbleAgent__ResolutionMessage__c</columns>
    <columns>KimbleAgent__RetryCount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>